# pyobfusinator

./: .gitignore  README.md  build-doc.py  pyproject.toml
docs/: index.html  index.template.html  style.css
pyobfusinator/: __init__.py  __main__.py  compress.py  exception.py  inflate.py
