[tool.poetry]
name = "pyobfusinator"
version = "0.1.0"
description = "Another Python obfuscator"
authors = ["hung <dthung1602@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "1.1.1"

[tool.poetry.scripts]
pyobfusinator = "pyobfusinator.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
